<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_layout"
    android:layout_margin="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/student_surname"
        android:autofillHints=""
        android:hint="@string/surname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/student_name"
        android:autofillHints=""
        android:hint="@string/student_name"/>


    <Button
        android:id="@+id/submit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:text="@string/submit" />


</LinearLayout>