<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cours_list"
        android:layout_width="330dp"
        android:layout_height="176dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/course_title"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_cours" />

        <EditText
            android:id="@+id/course_credit"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_code" />

        <Button
            android:id="@+id/submit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/submit" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>